# mutav-pulse

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  PRODUCT.md  README.md  bootstrap.sh  hackathon-checklist.md  seed.sh  shots  skills-lock.json
.claude/skills/defindex-api/: SKILL.md
.claude/workflows/: audit-remediation.js  fianca-redesign.js  frontend-call-audit.js  protocol-audit.js  whitepaper-regen.js
.design/branding/tga/: .brand-version
.superpowers/sdd/: frontend-final-fix-report.md  plan2-final-fix-report.md
circuits/: .gitignore  gen_input.mjs  leaf_check.circom  leaf_input.json  package-lock.json  package.json  proof.json  public.json  solvency.circom  solvency_b.circom  solvency_b_input.json  sv_input.json  verification_key.json
contracts/adapter-defindex/: Cargo.toml
contracts/adapter-defindex/src/: lib.rs  test.rs  test_adversarial.rs
contracts/defindex-hodl/src/: lib.rs
contracts/interfaces/: Cargo.toml
contracts/mock-defindex/: Cargo.toml
contracts/mock-policy/: Cargo.toml
contracts/mock-strategy/: Cargo.toml
contracts/mock-strategy/src/: lib.rs  test.rs
contracts/mock-strategy/test_snapshots/test/: invest_then_balance_then_divest.1.json
contracts/policy/: Cargo.toml
contracts/policy/src/: lib.rs  test.rs  test_adversarial.rs  test_system.rs
contracts/policy/test_snapshots/test/: premium_gated_coverage_and_default.1.json
contracts/policy/test_snapshots/test_system/: full_demo_flow_holds_solvency_invariant.1.json  policy_swap_preserves_data_and_funds.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs  test_adversarial.rs
contracts/registry/test_snapshots/test/: writer_gating_and_active_set.1.json
contracts/reserve/: Cargo.toml
contracts/reserve/src/: lib.rs  test.rs  test_narrative.rs  types.rs
contracts/reserve/test_snapshots/test/: cancel_redeem_returns_escrowed_shares.1.json  cover_default_divests_when_idle_is_short.1.json  cover_default_halted_until_premiums_current.1.json  cover_default_has_priority_over_queue.1.json  cover_default_pays_one_month_and_keeps_active.1.json  coverage_lapses_when_premium_period_passes.1.json  deposit_mints_shares_one_to_one_first_time.1.json  inflation_attack_does_not_zero_out_second_depositor.1.json  premium_activates_and_gates_coverage.1.json  premium_income_lifts_nav.1.json  rebalance_allocates_to_strategies_and_total_assets_sums.1.json  redemption_only_from_surplus_then_claim.1.json  remove_strategy_divests_and_drops_it.1.json  second_deposit_uses_nav.1.json  set_admin_rotates_authority.1.json  sign_guarantee_gated_by_free_capital.1.json
contracts/reserve/test_snapshots/test_narrative/: full_demo_flow_holds_solvency_invariant.1.json
contracts/solvency-attestor/: Cargo.toml  build.rs
contracts/solvency-attestor/src/: lib.rs  test.rs  test_fixture.rs
contracts/strategy/: Cargo.toml
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs  test_adversarial.rs  test_invariants.rs  types.rs
contracts/vault/test_snapshots/test/: deposit_and_nav_and_free_capital.1.json  disburse_and_collect_are_policy_gated.1.json  redemption_gated_by_free_capital.1.json
deck/: index.html
docs/: README.md  customer-discovery.md  defindex-testnet.md  overview.md  public-release-readiness.md  sep0056-conformance-decisions.md  vault-method-surface.md  whitepaper.md  zk-solvency-plan.md
docs/concepts/: economic-model.md  funding-and-access.md  solvency-and-coverage.md  vault-and-shares.md  yield-strategies.md
docs/guides/: deploying-and-wiring.md  quickstart.md  running-locally.md
docs/history/: README.md
docs/plans/: 2026-06-20-mutav-pulse-contracts-core.md  2026-06-21-mutav-pulse-modular-refactor.md  2026-06-22-mutav-pulse-defindex-adapter.md  2026-06-22-mutav-pulse-frontend.md  2026-06-23-mutav-pulse-multi-reserve-ui.md
docs/reference/: deployments.md  errors.md  proof-of-operation.md
docs/resources/: customer-discovery.md  glossary.md
docs/security/: adversarial-test-report.md  security-model.md  testing-and-audits.md  threat-model.md
docs/specs/: 2026-06-20-mutav-pulse-reserve-vault-design.md  2026-06-21-mutav-pulse-defindex-adapter-design.md  2026-06-21-mutav-pulse-modular-architecture-design.md  2026-06-22-mutav-pulse-frontend-design.md  2026-06-23-mutav-pulse-multi-reserve-ui-design.md  2026-06-27-mbrl-brl-native-reserve-design.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/bindings/: README.md
frontend/components/: AllocationBar.tsx  AllocationDonut.tsx  BuyTesouro.tsx  CbrlFaucet.tsx  ConnectButton.tsx  CurrencyLogo.tsx  DepositWidget.tsx  FaucetCard.tsx  GuaranteeTable.tsx  InfoTooltip.tsx  InvestCard.tsx  InvestPanel.tsx  LockIcon.tsx  MetricCard.tsx  Mono.tsx  NavShell.tsx  PositionPanel.tsx  ProtocolActionForm.tsx  ProtocolDiagram.tsx  RedeemPanel.tsx  RefreshControl.tsx  ReserveCard.tsx  ReserveHealthHeader.tsx  ReserveTransparency.tsx  SiteFooter.tsx  SolvencyChip.tsx  StatusBadge.tsx  TesouroFaucet.tsx  TestnetOnramp.tsx  TxStatus.tsx  UnverifiedReserve.tsx  UsdcFaucet.tsx  VenueDirectory.tsx  VerificationPanel.tsx  WalletProvider.tsx  ZkSolvencyBadge.tsx
frontend/e2e/: buttons.spec.ts  helpers.ts  inputs.spec.ts  tabs.spec.ts  tooltip.spec.ts
frontend/lib/: admin-account-tx.ts  admin-account.test.ts  admin-account.ts  admin-tx.ts  apy.test.ts  apy.ts  buy-tesouro.ts  config.ts  contracts.test.ts  contracts.ts  discovery.test.ts  discovery.ts  economics.test.ts  economics.ts  errors.test.ts  errors.ts  faucet.ts  format.test.ts  format.ts  onramp.ts  providers.ts  queue.test.ts  queue.ts  reserves.ts  ssr-localstorage-fix.ts  styling-guardrails.test.ts  trustline.ts  tx.ts  use-live-aum.ts  use-reserve-data.ts  wallet.ts
model/: README.md  mutav_model.py
prover/: .gitignore  anti-tamper.mjs  derisk-merkle.mjs  encode-for-soroban.mjs  merkle.mjs  package-lock.json  package.json  prove.mjs
scripts/: sync-deploy.sh
(+71 files in other folders)
