[workspace]
resolver = "2"
members = [
  # Official protocol — audited surface, mainnet-deployable
  "contracts/interfaces",
  "contracts/registry",
  "contracts/vault",
  "contracts/policy",
  "contracts/strategy",
  "contracts/adapter-defindex",
  # Test doubles / dev-only — testnet only, never mainnet
  "contracts/mocks/mock-strategy",
  "contracts/mocks/mock-policy",
  "contracts/mocks/mock-defindex",
  "contracts/mocks/defindex-hodl",
  "contracts/mocks/faucet",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "26.1.0"
stellar-tokens = "0.7.2"
# Audited fixed-point math (same release train as stellar-tokens). Used by the
# vault's SEP-0056 convert/preview to reuse OZ's overflow-checked rounding.
stellar-contract-utils = "0.7.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
