[package]
name = "adapter-defindex"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
strategy = { path = "../strategy" }
interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-defindex = { path = "../mocks/mock-defindex" }
vault = { path = "../vault" }
mock-policy = { path = "../mocks/mock-policy" }
