[package]
name = "mock-strategy"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
strategy = { path = "../strategy" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
