[package]
name = "policy"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
vault = { path = "../vault" }
registry = { path = "../registry" }
mock-strategy = { path = "../mock-strategy" }
