[package]
name = "vault"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = { workspace = true }
stellar-contract-utils = { workspace = true }
strategy = { path = "../strategy" }
interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-strategy = { path = "../mocks/mock-strategy" }
mock-tesouro = { path = "../mocks/mock-tesouro" }
mock-policy = { path = "../mocks/mock-policy" }
proptest = "1"
